[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyWannier90"
version = "0.0.1"
description = "A Python interface to Wannier90 for PySCF"
readme = "README.md"
license = {file = "LICENSE"}

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.18.0",
    "pyscf>=2.0.0",
]
requires-python = ">=3.9"

[[project.authors]]
name = "Huaqing Huang"

[[project.authors]]
name = "Andres Ortega-Guerrero"


[project.optional-dependencies]
dev = [
    "ruff"
]
